Fixed danger color too light

--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -92,7 +92,7 @@ $secondary-color-dark: var(--secondary-color-dark) !default;
 
 $success-color: color("green", "base") !default;
 $info-color: color("blue", "base") !default;
-$danger-color: color("red", "base") !default;
+$danger-color: color("red", "darken-1") !default;
 $warning-color: color("orange", "darken-2") !default;
 
 $link-color: var(--primary-color) !default;
